js262/test/staging/sm/fields/await-identifier-module-1.js


/*---
flags:
  - module
negative:
  phase: parse
  type: SyntaxError
description: |
  pending
esid: pending
---*/

async () => class { [await] = 1 };
$DONOTEVALUATE();
